--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^1.18.4",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
+  },
+  "engines": {
+    "node": "10.10.0"
   }
 }
