--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server/server.js",
     "server:dev": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w"
+    "build": "webpack -w",
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
   },
   "author": "",
   "license": "ISC",
